# regex-chunker

./: .gitignore  Cargo.toml  README.md
src/: adapter.rs  async.rs  base.rs  ctrl.rs  custom.rs  err.rs  lib.rs  stream.rs  stream_adapter.rs
test/: cessen_issue.txt  passwd.txt
