[package]
name = "regex-chunker"
version = "0.1.2"
authors = ["Dan (d2718) <dx2718@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
description = """
Iterate over the data in a `Read` type in a
regular-expression-delimited way.
"""
homepage = "https://github.com/d2718/regex-chunker"
repository = "https://github.com/d2718/regex-chunker"
documentation = "https://docs.rs/regex_chunker"
readme = "README.md"
categories = ["text-processing"]
keywords = ["regex", "iterator", "read", "chunking"]

#autobins = false

[dependencies]
regex = "^1.9"

bytes = { version = "^1.4", optional = true }
tokio = { version = "^1.29", features = ["io-util"], optional = true }
tokio-stream = { version = "^0.1", optional = true }
tokio-util = { version = "^0.7", features = ["codec"], optional = true }

fastrand = { version = "^2.0", optional = true }

[dev-dependencies]
fastrand = "^2.0"
reqwest = { version = "^0.11", features = ["blocking", "rustls-tls"] }

[features]
default = []
async = ["dep:bytes", "dep:tokio", "dep:tokio-stream", "dep:tokio-util"]
test = ["dep:fastrand"]